--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -19,8 +19,7 @@
         So i am in charge of a couple of sweapers and get to clean the school to prepare for the next day. One of the
         biggest advantages of leanring about web desgin is with so much
         of todays world having some type of online presence even having a basic knoweledge of web desgin will be
-        invaluable in several careers. hi hi
-    </p>
+        invaluable in several careers.</p>
     <p> some of my hobbies include watch movies, i am a huge movie nerd there is just nothing like going to a movie
         theater and being in that atomsphere. I also enjoy wathcing anime, i am curntlly rewatching attack on titan. i
         am also a huge gammer, i have been one eversince playing super mario world on the super nintendo at my aunts
@@ -28,6 +27,7 @@
         target shooting every chance i can find ammo and when its safe, because we dont need wildfires. i love wathcing
         football espically the Dallas Cowboys, which it why i wear the hat in my picture.</p>
     <p>I'm looking foreward to wroking with you all during this class.</p>
+    <P>new paragragh</P>
 </body>
 
 
