--- a/wwr/index.html
+++ b/wwr/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/Logo.png" alt="Dry Oar Logo">
+            <img class="logo" src="images/wwr Logo.png" width="150" height="150"  alt="Rapid Rafting Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -20,7 +20,54 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
-
+    <div id="hero">
+        <div id="hero-box">
+            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+        </div>
+        <section id="hero-msg">
+            <h1 class="home-title">Have An Adventure</h1>
+            <h4>Make Memories with Rapid Rafting </h4>
+            <div class='button-box'>
+                <a class='book' href="rates.html">Book Now</a>
+            </div>
+        </section>
+    </div>
+    <main class="home-grid">
+        <section class="rivers-card">
+            <img class="card-img" src="images/rivers.jpg" alt="rivers in forest">
+            <img class="icon" src="images/river_icon.png" alt="river icon">
+            <h2>Rivers</h2>
+        </section>
+        <section class="camping-card">
+            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+            <img class="icon" src="images/oars.png" alt="oars icon">
+            <h2>Rapids</h2>
+        </section>
+        <img class="moutains" src="images/mountains.jpg" alt="Misty moutains">
+        <section class="msg">
+            <h2>More than Just The Thrill</h2>
+            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyouns, and high peaks; it's way more than just
+                the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great
+                outdoors.</p>
+            <a class='join' href="rivers.html">Join Us</a>
+        </section>
+    </main>
+    <footer>
+        <h3>Rapid Rapids &copy; 20XX - Tyler Hulet</h3>
+        <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
+        <h3><a href="contactus.html">Contact Us</a></h3>
+        <div class="social">
+            <a href="https://facebook.com">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
 </body>
 
 </html>
