--- a/wwr/index.html
+++ b/wwr/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/wwr Logo.png" width="150" height="150"  alt="Rapid Rafting Logo">
+            <img class="logo" src="images/wwr logo.png" width="150" height="150"  alt="Rapid Rafting Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
