--- a/wwr/index.html
+++ b/wwr/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/wwr-logo.png" width="150" height="150"  alt="Rapid Rafting Logo">
+            <img class="logo" src="images/RR-logo.png" width="175" height="200"  alt="Rapid Rafting Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -39,6 +39,11 @@
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
+            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+            <img class="icon" src="images/fire_icon.png" alt="fire icon">
+            <h2>Camping</h2>
+        </section>
+        <section class="rapids-card">
             <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
