W03 Html Home Page Complete

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -48,7 +48,7 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
-        <img class="moutains" src="images/moutains.jpg" alt="Misty moutains">
+        <img class="moutains" src="images/mountains.jpg" alt="Misty moutains">
         <section class="msg">
             <h2>More than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyouns, and high peaks; it's way more than just
