--- a/wwr/index.html
+++ b/wwr/index.html
@@ -13,7 +13,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/RR-Logo.png" width="170" height="100" alt="Rapid Rafting Logo">
+                <img class="logo" src="images/RR-Logo.png" width="135" alt="Rapid Rafting Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
