--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -20,11 +19,15 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>The prupose of this webpage is to help build and expand revenue income by offering river tours and merchandise.</p>
+    <p>The prupose of this webpage is to help build and expand revenue income by offering river tours and merchandise.
+    </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>The target audience is family's, single's, and businesses. a safe and fun activity to do outside. weather there familys looking for a fun afternoon activity, or a someone single looking for some adventure. even a business looking for a great team buliding activity they cna find in here. the audience can use any device to access the site.  </p>
+    <p>The target audience is family's, single's, and businesses. a safe and fun activity to do outside. weather there
+      familys looking for a fun afternoon activity, or a someone single looking for some adventure. even a business
+      looking for a great team buliding activity they cna find in here. the audience can use any device to access the
+      site. </p>
     <!-- change this -->
 
     <hr />
