--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -156,8 +156,8 @@
       [Written copy for the home page here]
     </p>
     <p>Images for the Home page</p>
-    <img src="#" alt="image for homepage">
-    <img src="#" alt="image for homepage">
+    <img src="images/flowereshop.jpg" alt="image for homepage">
+    <img src="images/workbench.jpg" alt="image for homepage">
 
     </ul>
     <h3>[Page 2]</h3>
@@ -165,16 +165,16 @@
       [Written copy for the Page 2 here]
     </p>
     <p>Images for the Page 2</p>
-    <img src="#" alt="image for page">
-    <img src="#" alt="image for page">
+    <img src="images/wedding.jpg" alt="image for page">
+    <img src="images/mothersday.jpg" alt="image for page">
 
     </ul>
-    <h3>[Page 3]</h3>
+    <h3>Sympathy</h3>
     <p>
       [Written copy for the Page 3 here]
     </p>
     <p>Images for the Page 3</p>
-    <img src="#" alt="image for page3">
+    <img src="images/casketmount.jpg" alt="image for page3">
     <img src="#" alt="image for page3">
 
     </ul>
