--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -160,7 +160,7 @@
     <img src="images/workbench.jpg" alt="image for homepage">
 
     </ul>
-    <h3>[Page 2]</h3>
+    <h3>Special occasions</h3>
     <p>
       [Written copy for the Page 2 here]
     </p>
