W08 personal site plan update

--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -126,11 +126,11 @@
         Home
       </div>
       <div class="sm-page2">
-        [Page2]
+        Special Occasions
         <!-- change this -->
       </div>
       <div class="sm-page3">
-        [Page3]
+        Sympathy
         <!-- change this -->
       </div>
 
@@ -153,29 +153,70 @@
     </h2>
     <h3>Home page</h3>
     <p>
-      [Written copy for the home page here]
+      Flowers for any occasion
+      We understand that life can be crazy sometimes, and flowers are usually only thought of for special occasions.
+      That's just not true, they are perfect for any occasion, and they are great for any time of year. Whether that's
+      something planned out weeks in advance or something that more last minute. Flowers have the unique ability to
+      brighten both people's moods and environment.
+      We understand that people have busy lives, that's where we come into play by making ordering flowers online
+      easier. We are happy to deliver anywhere in our area with the prices ranging from 5 dollars for local and going up
+      the greater the distance.
+
+
     </p>
     <p>Images for the Home page</p>
     <img src="images/flowereshop.jpg" alt="image for homepage">
     <img src="images/workbench.jpg" alt="image for homepage">
 
     </ul>
-    <h3>Special occasions</h3>
+    <h3>Special Occasions</h3>
     <p>
-      [Written copy for the Page 2 here]
+      Weddings: When it comes to your wedding day it should be one of the most special days of your life. The flowers
+      should be just as special. Offering a wide of options ranging from boutonnieres and corsages. To the bridal
+      bouquet, a throw bouquet, center pieces for the tables and even for the cake. We offer many different flower
+      options to make your day special. With prices ranging from the in expensive carnations to the always popular rose.
+      Even offering some of more unique options. Let us help make your day even more special.
+      When it comes to weddings, we need at least 2 weeks' notice because they require us to special order them so we
+      can make sure they are exactly what you need for your special day.
+
+      Mother's Day: Everybody loves their mothers and wants to show their appreciation for them. What better way then
+      getting them a beautiful bouquet of fresh flowers. Whether that's something simple like a dozen roses in a wrap to
+      more complex bouquet. Let us be your choice to for your Mother's Day flowers.
+
+      Valentine's day: Nothing says you love your significant other on Valentine's Day like fresh flowers. No matter
+      what kind they like we offer it. From lily's, tulips or even roses we have them. Let help make your valentines day
+      even more special for the special someone in your life.
+      We always have fresh flowers on hand, so no matter how busy you are we always have your back for those last-minute
+      flower needs.
+
     </p>
     <p>Images for the Page 2</p>
     <img src="images/wedding.jpg" alt="image for page">
     <img src="images/mothersday.jpg" alt="image for page">
+    <img src="images/feb14.jpg" alt="image for page">
 
     </ul>
     <h3>Sympathy</h3>
     <p>
-      [Written copy for the Page 3 here]
+      Funeral: it's never an easy when you lose a loved one, but a funeral should be celebration of life. There for the
+      flowers should be an extension in every aspect. From the casket mount to the easel even down to the smallest
+      container. If you have any special items like, their favorite sport, a hobby, maybe even something forms their
+      career. Any of these ideas can be incorporated into the arrangements.
+      There are also options for smaller arrangements that are great options to send directly to the family to help
+      brighten up there day during this difficult time. If there is something specific, you would like to say to the
+      family we are happy to add it to the card. Other wise we will add something appropriate to the card.
+      Get well soon:
+      Being in sick is never a fun experience. That's where our flowers come into play, because whether there in the
+      hospital because of a broken bone or something more serious. Or just at home because of the flu or covid-19, there
+      day can still be brightened up with some flowers. Options include simple tasteful wraps, small arrangements, large
+      arrangements. Some even including a stuffed animal so they can have a companion while they are sick. When it comes
+      to get well arrangements the cards that are included. The costumer would provide what is on the card. But we also
+      offer the option to add something simple if you don't provide something for the card.
+
     </p>
     <p>Images for the Page 3</p>
     <img src="images/casketmount.jpg" alt="image for page3">
-    <img src="#" alt="image for page3">
+    <img src="images/Hflowers.jpg" alt="image for page3">
 
     </ul>
     <hr>
