--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -153,7 +153,7 @@
     </h2>
     <h3>Home page</h3>
     <p>
-      Flowers for any occasion
+      <b>For any occasion:</b>
       We understand that life can be crazy sometimes, and flowers are usually only thought of for special occasions.
       That's just not true, they are perfect for any occasion, and they are great for any time of year. Whether that's
       something planned out weeks in advance or something that more last minute. Flowers have the unique ability to
@@ -171,7 +171,7 @@
     </ul>
     <h3>Special Occasions</h3>
     <p>
-      Weddings: When it comes to your wedding day it should be one of the most special days of your life. The flowers
+      <b>Weddings:</b> When it comes to your wedding day it should be one of the most special days of your life. The flowers
       should be just as special. Offering a wide of options ranging from boutonnieres and corsages. To the bridal
       bouquet, a throw bouquet, center pieces for the tables and even for the cake. We offer many different flower
       options to make your day special. With prices ranging from the in expensive carnations to the always popular rose.
@@ -179,11 +179,11 @@
       When it comes to weddings, we need at least 2 weeks' notice because they require us to special order them so we
       can make sure they are exactly what you need for your special day.
 
-      Mother's Day: Everybody loves their mothers and wants to show their appreciation for them. What better way then
+      <b>Mother's Day:</b> Everybody loves their mothers and wants to show their appreciation for them. What better way then
       getting them a beautiful bouquet of fresh flowers. Whether that's something simple like a dozen roses in a wrap to
       more complex bouquet. Let us be your choice to for your Mother's Day flowers.
 
-      Valentine's day: Nothing says you love your significant other on Valentine's Day like fresh flowers. No matter
+      <b>Valentine's day:</b> Nothing says you love your significant other on Valentine's Day like fresh flowers. No matter
       what kind they like we offer it. From lily's, tulips or even roses we have them. Let help make your valentines day
       even more special for the special someone in your life.
       We always have fresh flowers on hand, so no matter how busy you are we always have your back for those last-minute
@@ -198,14 +198,15 @@
     </ul>
     <h3>Sympathy</h3>
     <p>
-      Funeral: it's never an easy when you lose a loved one, but a funeral should be celebration of life. There for the
+      <b>Funeral:</b> it's never an easy when you lose a loved one, but a funeral should be celebration of life. There for the
       flowers should be an extension in every aspect. From the casket mount to the easel even down to the smallest
       container. If you have any special items like, their favorite sport, a hobby, maybe even something forms their
       career. Any of these ideas can be incorporated into the arrangements.
       There are also options for smaller arrangements that are great options to send directly to the family to help
       brighten up there day during this difficult time. If there is something specific, you would like to say to the
       family we are happy to add it to the card. Other wise we will add something appropriate to the card.
-      Get well soon:
+      
+      <b>Get well soon:</b>
       Being in sick is never a fun experience. That's where our flowers come into play, because whether there in the
       hospital because of a broken bone or something more serious. Or just at home because of the flu or covid-19, there
       day can still be brightened up with some flowers. Options include simple tasteful wraps, small arrangements, large
