homepage wireframe added

--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -231,7 +231,7 @@
     <p>
       [Any additional details about home that the wireframe does not make clear]
     </p>
-    <img src="#" alt="home page wireframe">
+    <img src="images/homepagewireframe.png" alt="home page wireframe" width="600">
 
     <h3>[Page 2]</h3>
     <p>
