--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -243,7 +243,7 @@
     <p>
       [Any additional details about page 2 that the wireframe does not make clear]
     </p>
-    <img src="images/personalpage2.png" alt="page 2 wireframe" width="600">
+    <img src="images/Wireframepage2.png" alt="page 2 wireframe" width="600">
 
     <h3>[Page 3]</h3>
     <p>
