personal wireframe update

--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -241,15 +241,15 @@
 
     <h3>[Page 2]</h3>
     <p>
-      [Any additional details about page 2 that the wireframe does not make clear]
+      this wireframe is for my special occasions page
     </p>
     <img src="images/Wireframepage2.png" alt="page 2 wireframe" width="600">
 
     <h3>[Page 3]</h3>
     <p>
-      [Any additional details about page 3 that the wireframe does not make clear]
+      This wireframe is for my Sympathy page
     </p>
-    <img src="#" alt="page 3 wireframe">
+    <img src="images/wireframepage3.png" alt="page 3 wireframe" width="600">
   </main>
 </body>
 
