--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | Rapid Rafting | Home</title>
+    <title>Whitewater Rafting Vacations | Rapid Rafting | Rivers</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -17,17 +17,17 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="rivers.html">Rivers</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
-        <div id="hero">
-            <div id="hero-box">
-                <img id="hero-img" src="images/rivers.jpg" alt="People enjoying white water rafting">
+        <div id="riverhero">
+            <div id="river-box">
+                <img id="river-img" src="images/rivers-wide.jpg" alt="People enjoying white water rafting">
             </div>
-            <section id="hero-msg">
-                <h1 class="home-title">Have An Adventure</h1>
+            <section id="river-msg">
+                <h1 class="river-title">Rivers</h1>
                 <h4>Make Memories with Rapid Rafting </h4>
                 <div class='button-box'>
                     <a class='book' href="rates.html">Book Now</a>
