--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | Rapid Rafting | Rivers</title>
+    <title>Rivers</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -22,43 +22,36 @@
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
-        <div id="riverhero">
-            <div id="river-box">
-                <img id="river-img" src="images/rivers-wide.jpg" alt="People enjoying white water rafting">
+        <div id="banner">
+            <div id="banner-box">
+                <img id="banner-img" src="images/rivers-wide.jpg" alt="People enjoying white water rafting">
             </div>
-            <section id="river-msg">
-                <h1 class="river-title">Rivers</h1>
-                <h4>Make Memories with Rapid Rafting </h4>
+            <section id="banner-msg">
+                <h1 class="banner-title">Rivers</h1>
+                <h4>learn more below</h4>
                 <div class='button-box'>
                     <a class='book' href="rates.html">Book Now</a>
                 </div>
             </section>
         </div>
-        <main class="home-grid">
-            <section class="rivers-card">
-                <img class="card-img" src="images/rivers.jpg" alt="rivers in forest">
-                <img class="icon" src="images/river_icon.png" alt="river icon">
-                <h2>Rivers</h2>
+        <main class="river-grid">
+            <section class="salmon-pic">
+                <img class="river-img" src="images/salmon-interest.jpg" alt="rivers in forest">
+                <h2>Main Fork of the Salmon River, Idaho</h2>
             </section>
-            <section class="camping-card">
-                <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-                <img class="icon" src="images/fire_icon.png" alt="fire icon">
-                <h2>Camping</h2>
-            </section>
-            <section class="rapids-card">
-                <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-                <img class="icon" src="images/oars.png" alt="oars icon">
-                <h2>Rapids</h2>
-            </section>
-            <div id="background"></div>
-            <img class="moutains" src="images/mountains.jpg" alt="Misty moutains">
-            <section class="msg">
-                <h2>More than Just The Thrill</h2>
-                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyouns, and high peaks; it's way more than
-                    just
-                    the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great
-                    outdoors.</p>
-                <a class='join' href="rivers.html">Join Us</a>
+            <section class="salmon-text">
+                <p>Nestled deep in the Frank Church Wilderness of No Return winds the Salmon river. The
+                    Salmon was given the nickname long ago as the River of No Return by the people living near it
+                    because of the number of folks that came to visit and fell so in love with the rugged beauty of the
+                    river that they never left.
+
+                    Herds of elk and deer graze on the hillsides around the river and bear and bighorn sheep are also
+                    commonly sighted.</p>
+                <p>Let's not forget the rapids! They range from class I-IV. The Salmon is one of the longest undammed
+                    rivers in the United States. As a free flowing river the water is higher, faster, and colder in the
+                    early summer and lower, slower, and warmer in the late summer. There are good rapids all
+                    summer...but families with children who like to swim tend to appreciate the late summer's slower,
+                    warmer water more.</p>
             </section>
         </main>
         <footer>
