--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -36,15 +36,15 @@
         </div>
         <main class="river-grid">
             <section class="salmon-pic">
-                <img class="river-img" src="images/salmon-interest.jpg" alt="rivers in forest">
+                <img class="salmon-img" src="images/salmon-interest.jpg" alt="rivers in forest">
                 <h2>Main Fork of the Salmon River, Idaho</h2>
             </section>
             <section class="salmon-text">
                 <p>Nestled deep in the Frank Church Wilderness of No Return winds the Salmon river. The
                     Salmon was given the nickname long ago as the River of No Return by the people living near it
                     because of the number of folks that came to visit and fell so in love with the rugged beauty of the
-                    river that they never left.
-
+                    river that they never left.</p>
+                <p>
                     Herds of elk and deer graze on the hillsides around the river and bear and bighorn sheep are also
                     commonly sighted.</p>
                 <p>Let's not forget the rapids! They range from class I-IV. The Salmon is one of the longest undammed
@@ -52,7 +52,29 @@
                     early summer and lower, slower, and warmer in the late summer. There are good rapids all
                     summer...but families with children who like to swim tend to appreciate the late summer's slower,
                     warmer water more.</p>
+
             </section>
+            <section class="utah-pic">
+                <img class="utah-img" src="images/desolation-interest.jpg" alt="desolation canyon">
+                <h2>Desolation and Gray Canyon, Utah</h2>
+            </section>
+            <section class="utah-text">
+                <p>
+                    Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river
+                    flows towards the mighty Colorado river and the sea. High grey stone cliffs, beautiful desert
+                    scenery, and great rapids have made this run famous. This 84-mile trip runs from from Sand Wash to
+                    Swaseys Rapid (just outside Green River Utah) and boasts outstanding scenery, interesting geologic
+                    formations, evidence of prehistoric and historic human activity, and great whitewater opportunities.
+                </p>
+                <p>
+                    Desolation is rated a Class II/III and is usually done in 6 days
+                </p>
+                <p>
+                    Desolation Canyon has been recognized as a National Landmark. This designation is based on the
+                    uniqueness and rich history that the canyon tells.
+                </p>
+            </section>
+
         </main>
         <footer>
             <h3>Rapid Rapids &copy; 20XX - Tyler Hulet</h3>
