--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -39,7 +39,7 @@
                 <img class="salmon-img" src="images/salmon-interest.jpg" alt="rivers in forest">
                 <h2>Main Fork of the Salmon River, Idaho</h2>
             </section>
-            <section class="salmon-text">
+            <section class="salmon-info">
                 <p>Nestled deep in the Frank Church Wilderness of No Return winds the Salmon river. The
                     Salmon was given the nickname long ago as the River of No Return by the people living near it
                     because of the number of folks that came to visit and fell so in love with the rugged beauty of the
@@ -58,7 +58,7 @@
                 <img class="utah-img" src="images/desolation-interest.jpg" alt="desolation canyon">
                 <h2>Desolation and Gray Canyon, Utah</h2>
             </section>
-            <section class="utah-text">
+            <section class="utah-info">
                 <p>
                     Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river
                     flows towards the mighty Colorado river and the sea. High grey stone cliffs, beautiful desert
