--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -36,10 +36,11 @@
         </div>
         <main class="river-grid">
             <section class="salmon-pic">
-                <img class="salmon-img" src="images/salmon-interest.jpg" alt="rivers in forest">
-                <h2>Main Fork of the Salmon River, Idaho</h2>
+                <img class="salmon-img" src="images/salmon-interest.jpg" alt="Main Fork of the Salmon River">
+                
             </section>
             <section class="salmon-info">
+                <h2>Main Fork of the Salmon River, Idaho </h2>
                 <p>Nestled deep in the Frank Church Wilderness of No Return winds the Salmon river. The
                     Salmon was given the nickname long ago as the River of No Return by the people living near it
                     because of the number of folks that came to visit and fell so in love with the rugged beauty of the
@@ -56,9 +57,9 @@
             </section>
             <section class="utah-pic">
                 <img class="utah-img" src="images/desolation-interest.jpg" alt="desolation canyon">
-                <h2>Desolation and Gray Canyon, Utah</h2>
             </section>
-            <section class="utah-info">
+            <section class="utah-info"> 
+                <h2>Desolation and Gray Canyon, Utah</h2>
                 <p>
                     Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river
                     flows towards the mighty Colorado river and the sea. High grey stone cliffs, beautiful desert
