--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -37,7 +37,7 @@
         <main class="river-grid">
             <section class="salmon-pic">
                 <img class="salmon-img" src="images/salmon-interest.jpg" alt="Main Fork of the Salmon River">
-                
+                <h5>pic</h5>
             </section>
             <section class="salmon-info">
                 <h2>Main Fork of the Salmon River, Idaho </h2>
@@ -57,6 +57,7 @@
             </section>
             <section class="utah-pic">
                 <img class="utah-img" src="images/desolation-interest.jpg" alt="desolation canyon">
+            <h5>pic</h5>
             </section>
             <section class="utah-info"> 
                 <h2>Desolation and Gray Canyon, Utah</h2>
