rafting subpage complete

--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -57,9 +57,9 @@
             </section>
             <section class="utah-pic">
                 <img class="utah-img" src="images/desolation-interest.jpg" alt="desolation canyon">
-            <h5>pic</h5>
+                <h5>pic</h5>
             </section>
-            <section class="utah-info"> 
+            <section class="utah-info">
                 <h2>Desolation and Gray Canyon, Utah</h2>
                 <p>
                     Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river
@@ -74,6 +74,28 @@
                 <p>
                     Desolation Canyon has been recognized as a National Landmark. This designation is based on the
                     uniqueness and rich history that the canyon tells.
+                </p>
+            </section>
+            <section class="arizona">
+                <img class="arizona-img" src="images/littlecolorado.jpg" alt="colorado through the grand canyon">
+                <h5>pic</h5>
+            </section>
+            <section class="arizona-info">
+                <h2>Grand Canyon, Arizona</h2>
+                <p>
+                    This is the grand daddy of all canyons and the grand daddy of all river trips. You will never forget
+                    your visit to the Grand Canyon.
+                </p>
+                <p>
+                    Grand Canyon river rafting combines world-class whitewater with breathtaking scenery to make one
+                    truly unforgettable river experience. The canyon is filled not only with exhilarating whitewater
+                    rapids, but with side canyons and ancient indian ruins accessible only by river.
+                </p>
+                <p>
+                    CLASS I - X: The Grand Canyon uses a unique river rating scale. The rapids in the Canyon are
+                    technically rated I - X ( 1 - 10) to accommodate such a wide variety of rapids and river variances.
+                    However, most people are familiar with the regular I - V river rating scale, so we often refer to
+                    both.
                 </p>
             </section>
 
