--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -234,20 +234,23 @@
     <h3>Home</h3>
     <p>
       I added in an about us section to add a little bit of a background to who behind the website and business. I have
-      it above the main paragrapgh that would act like a mission statment, but i will probley move below the main
-      paragrapgh.
+      a little background color around the mission statment and i insluded a about us section as part of the home page.
     </p>
     <img src="images/homepagewireframe.png" alt="home page wireframe" width="600">
 
     <h3>[Page 2]</h3>
     <p>
-      this wireframe is for my special occasions page
+      This wireframe is for my special occasions page. for this one i made the weedings the main focal point by making
+      it the largest then i added in the two smaller item below. i might change the formatting a little bit in the final
+      page.
     </p>
-    <img src="images/Wireframepage2.png" alt="page 2 wireframe" width="600">
+    <img src="images/wireframepage2.png" alt="page 2 wireframe" width="600">
 
     <h3>[Page 3]</h3>
     <p>
-      This wireframe is for my Sympathy page
+      This wireframe is for my Sympathy page.
+      The main idea was to have the main info then have three opions as a
+      starting point to look at for each of the featured options.
     </p>
     <img src="images/wireframepage3.png" alt="page 3 wireframe" width="600">
   </main>
