--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -245,7 +245,7 @@
       page.
     </p>
     
-    <img src="images/feb14.jpg" alt="page 2 wireframe" width="600">
+    <img src="images/subpage2-wireframe.png" alt="page 2 wireframe" width="600">
 
     <h3>[Page 3]</h3>
     <p>
