--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -7,6 +7,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact-Us</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <style>
+        form {
+            margin: 0 auto;
+            width: 400px;
+            padding: 1em;
+            border: 1px solid #ccc;
+            border-radius: 1em;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        form li+li {
+            margin-top: 1em;
+        }
+
+        label {
+            display: inline-block;
+            width: 90px;
+            text-align: right;
+        }
+
+        input,
+        textarea {
+            font: 1em sans-serf;
+            width: 300px;
+            border: 1px solid #999
+        }
+
+        input:focus,
+        textarea:focus {
+            border-color: #000;
+        }
+
+        textarea {
+            vertical-align: top;
+            height: 5em;
+        }
+
+        .button {
+            padding-left: 90px;
+        }
+
+        button {
+            margin-left: .5em;
+        }
+
+        #feedback {
+            background-color: antiquewhite;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            padding: .5em;
+            display: none;
+        }
+
+        .moveDown {
+            margin-top: 3em;
+        }
+    </style>
 </head>
 
 <body>
@@ -23,8 +87,37 @@
             </nav>
         </header>
         <main>
-            
-
+            <div id="feedback"></div>
+            <form action="/my-handling-form-page" method="post">
+                <ul>
+                    <li>
+                        <laber for="name">Name:</laber>
+                        <input type="text" id="name" name="user_name">
+                    </li>
+                    <li>
+                        <label for="mail">E-mail:</label>
+                        <input type="email" id="mail" name="user_email">
+                    </li>
+                    <li>
+                        <label for="msg">Message:</label>
+                        <textarea id="msg" name="user_messgage"></textarea>
+                    </li>
+                    <li class="button">
+                        <button type="submit">Send your message</button>
+                    </li>
+                </ul>
+            </form>
+            <script>
+                const feedbackElement = document.getElementById('feedback');
+                const formElement = document.forms[0];
+                formElement.addEventListener('submit', function (e) {
+                    e.preventDefault();
+                    feedbackElement.innerHTML = 'Hello ' + formElement.user_name.value +
+                        '! Thank you for your message. We will get back with you as soon as possible!';
+                    feedbackElement.style.display = "block";
+                    document.body.classList.toggle('moveDown');
+                });
+            </script>
         </main>
         <footer>
             <h3>Rapid Rapids &copy; 20XX - Tyler Hulet</h3>
