home page small update

--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -39,7 +39,7 @@
             </p>
         </section>
         <section id="aboutus">
-            <img class="bouwuet" src="" alt="flower being prepared">
+            <img class="bouquet" alt="flower being prepared">
             <h1>About Us</h1>
             <p>
                 
