home page update

--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -24,10 +24,8 @@
         <img id="banner-img" src="images/flowereshop.jpg" alt="flowershop counter">
     </div>
     <main class="home-grid">
-        <section id="workbench">
-            <img class="workbench-pic" src="images/workbench.jpg" alt="flower workbench">
-            <h4>preparging a bouquet</h4>
-        </section>
+        <div id="workbench"></div>
+        <img class="workbench-pic" src="images/workbench.jpg" alt="flower workbench">
         <section id="mission">
             <h1>Flowers for any occasion</h1>
             <p>
@@ -38,14 +36,20 @@
                 busy lives, that’s where we come into play by making ordering flowers online easier.
             </p>
         </section>
-        <section id="aboutus">
-            <img class="bouquet" alt="flower being prepared">
+        <div id="bouquet"></div>
+            <img class="bouquet-pic" src="images/prepare.jpg" alt="flower being prepared">
+            <section id="aboutus">
             <h1>About Us</h1>
             <p>
-                
+                The Petal Pantry has been serving Provo and the surroding areas for over 20 years. Chad Hulet over the
+                years has growne this small family owned bunsiness into one that is recongized across the state. he has
+                done this by paying attetion to small details and helping people acheive there flower dreams.
             </p>
         </section>
     </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
