personal site home page complete

--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -37,8 +37,8 @@
             </p>
         </section>
         <div id="bouquet"></div>
-            <img class="bouquet-pic" src="images/prepare.jpg" alt="flower being prepared">
-            <section id="aboutus">
+        <img class="bouquet-pic" src="images/prepare.jpg" alt="flower being prepared">
+        <section id="aboutus">
             <h1>About Us</h1>
             <p>
                 The Petal Pantry has been serving Provo and the surroding areas for over 20 years. Chad Hulet over the
@@ -48,7 +48,17 @@
         </section>
     </main>
     <footer>
-
+        <h3>Petal Pantry &copy; 2022 - Tyler Hulet</h3>
+        <h3><a href="site-plan.html">Site-Plan</a></h3>
+        <h3>If you need more info please call: 801-374-1000</h3>
+        <div id="social">
+            <a href="https://facebook.com" target="blank">
+                <img src="images/facebook.png" alt="facebook icon">
+            </a>
+            <a href="https://instagram.com" target="blank">
+                <img src="images/instagram.png" alt="intagram icon">
+            </a>
+        </div>
     </footer>
 </body>
 
