--- a/personalsite/special-occasions.html
+++ b/personalsite/special-occasions.html
@@ -23,29 +23,21 @@
     <div id="banner">
         <img id="banner-img" src="images/flowereshop.jpg" alt="flowershop counter">
     </div>
-    <main class="home-grid">
-        <div id="workbench"></div>
-        <img class="workbench-pic" src="images/workbench.jpg" alt="flower workbench">
-        <section id="mission">
-            <h1>Flowers for any occasion</h1>
+    <main class="occasion-grid">
+        <section class="weddings">
+            <h6></h6>
+            <P><strong>Weddings</strong></P>
             <p>
-                We understand that life can be crazy sometimes, and flowers are usually only thought of for special
-                occasions. That’s just not true, they are perfect for any occasion, and they are great for any time of
-                year. Whether that’s something planned out weeks in advance or something that more last minute. Flowers
-                have the unique ability to brighten both people’s moods and environment. We understand that people have
-                busy lives, that’s where we come into play by making ordering flowers online easier.
+                When it comes to your wedding day it should be one of the most special days of your life. The flowers
+                should be just as special. Offering a wide of options ranging from boutonnieres and corsages. To the
+                bridal bouquet, a throw bouquet, center pieces for the tables and even for the cake. We offer many
+                different flower options to make your day special. With prices ranging from the in expensive carnations
+                to the always popular rose. Even offering some of more unique options. Let us help make your day even
+                more special. When it comes to weddings, we need at least 2 weeks' notice because they require us to
+                special order them so we can make sure they are exactly what you need for your special day.
             </p>
         </section>
-        <div id="bouquet"></div>
-        <img class="bouquet-pic" src="images/prepare.jpg" alt="flower being prepared">
-        <section id="aboutus">
-            <h1>About Us</h1>
-            <p>
-                The Petal Pantry has been serving Provo and the surroding areas for over 20 years. Chad Hulet over the
-                years has growne this small family owned bunsiness into one that is recongized across the state. he has
-                done this by paying attetion to small details and helping people acheive there flower dreams.
-            </p>
-        </section>
+
     </main>
     <footer>
         <h3>Petal Pantry &copy; 2022 - Tyler Hulet</h3>
