--- a/personalsite/sympathy.html
+++ b/personalsite/sympathy.html
@@ -23,29 +23,17 @@
     <div id="banner">
         <img id="banner-img" src="images/flowereshop.jpg" alt="flowershop counter">
     </div>
-    <main class="home-grid">
-        <div id="workbench"></div>
-        <img class="workbench-pic" src="images/workbench.jpg" alt="flower workbench">
-        <section id="mission">
-            <h1>Flowers for any occasion</h1>
-            <p>
-                We understand that life can be crazy sometimes, and flowers are usually only thought of for special
-                occasions. That’s just not true, they are perfect for any occasion, and they are great for any time of
-                year. Whether that’s something planned out weeks in advance or something that more last minute. Flowers
-                have the unique ability to brighten both people’s moods and environment. We understand that people have
-                busy lives, that’s where we come into play by making ordering flowers online easier.
-            </p>
-        </section>
-        <div id="bouquet"></div>
-        <img class="bouquet-pic" src="images/prepare.jpg" alt="flower being prepared">
-        <section id="aboutus">
-            <h1>About Us</h1>
-            <p>
-                The Petal Pantry has been serving Provo and the surroding areas for over 20 years. Chad Hulet over the
-                years has growne this small family owned bunsiness into one that is recongized across the state. he has
-                done this by paying attetion to small details and helping people acheive there flower dreams.
-            </p>
-        </section>
+    <main class="sympathy-grid">
+        <p>
+            It's never an easy when you lose a loved one, but a funeral should be celebration of life. There for the
+            flowers should be an extension in every aspect. From the casket mount to the easel even down to the smallest
+            container. If you have any special items like, their favorite sport, a hobby, maybe even something forms
+            their career. Any of these ideas can be incorporated into the arrangements. There are also options for
+            smaller arrangements that are great options to send directly to the family to help brighten up there day
+            during this difficult time. If there is something specific, you would like to say to the family we are happy
+            to add it to the card. Other wise we will add something appropriate to the card.
+        </p>
+
     </main>
     <footer>
         <h3>Petal Pantry &copy; 2022 - Tyler Hulet</h3>
