--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <a href="index.html">Home</a>
-            <a href="specialoccasions.html">Special occasions</a>
+            <a href="special-occasions.html">Special occasions</a>
             <a id="logo-link" href="index.html">
                 <img class="logo" src="images/logo.png" alt="Petal Pantry Logo">
             </a>
