personal site update

--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -24,8 +24,9 @@
         <img id="banner-img" src="images/flowereshop.jpg" alt="flowershop counter">
     </div>
     <main class="home-grid">
-        <div id="workbench"></div>
-        <img class="workbench-pic" src="images/workbench.jpg" alt="flower workbench">
+        <div id="workbench">
+            <img class="workbench-pic" src="images/workbench.jpg" alt="flower workbench">
+        </div>
         <section id="mission">
             <h1>Flowers for any occasion</h1>
             <p>
@@ -36,8 +37,9 @@
                 busy lives, that’s where we come into play by making ordering flowers online easier.
             </p>
         </section>
-        <div id="bouquet"></div>
-        <img class="bouquet-pic" src="images/prepare.jpg" alt="flower being prepared">
+        <div id="bouquet">
+            <img class="bouquet-pic" src="images/prepare.jpg" alt="flower being prepared">
+        </div>
         <section id="aboutus">
             <h1>About Us</h1>
             <p>
