--- a/personalsite/special-occasions.html
+++ b/personalsite/special-occasions.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal site home page</title>
+    <title>Special Occasions</title>
 </head>
 
 <body>
     <header>
         <nav>
             <a href="index.html">Home</a>
-            <a href="specialoccasions.html">Special occasions</a>
+            <a href="special-occasions.html">Special occasions</a>
             <a id="logo-link" href="index.html">
                 <img class="logo" src="images/logo.png" alt="Petal Pantry Logo">
             </a>
@@ -20,12 +20,21 @@
             <a href="site-plan.html">Site-Plan</a>
         </nav>
     </header>
-    <div id="banner">
-        <img id="banner-img" src="images/flowereshop.jpg" alt="flowershop counter">
-    </div>
     <main class="occasion-grid">
+        <div id="wedding1">
+            <img src="images/wedding.jpg" alt="brid holding flowers">
+        </div>
+        <div id="wedding2">
+            <img src="images/wedding-cake.jpg" alt="wedding cake">
+        </div>
+        <div id="wedding3">
+            <img src="images/center-piece.jpg" alt="center peice flower">
+        </div>
+        <div id="wedding4">
+            <img src="images/hand-corsages.jpg" alt="white rose corsages">
+        </div>
         <section class="weddings">
-            <h6></h6>
+            <h6>weddings</h6>
             <P><strong>Weddings</strong></P>
             <p>
                 When it comes to your wedding day it should be one of the most special days of your life. The flowers
@@ -35,6 +44,39 @@
                 to the always popular rose. Even offering some of more unique options. Let us help make your day even
                 more special. When it comes to weddings, we need at least 2 weeks' notice because they require us to
                 special order them so we can make sure they are exactly what you need for your special day.
+            </p>
+        </section>
+        <div id="mothers-pic">
+            <img src="images/bright flowers.jpg" alt="bright flowers">
+        </div>
+        <div id="mothers-pic1">
+            <img src="images/roses.jpg" alt="bunch of roses">
+        </div>
+        <section class="mothers">
+            <h6>mothersday</h6>
+            <p><strong>Mothers Day</strong></p>
+            <p>
+                Everybody loves their mothers and wants to show their appreciation for them. What better way to show
+                just how much you love your mother then
+                getting them a beautiful bouquet of fresh flowers. Whether that's something simple like a dozen roses in
+                a wrap or something more of a complex bouquet.
+            </p>
+        </section>
+        <div id="valentine">
+            <img src="images/feb14.jpg" alt="valentine gifts">
+        </div>
+        <div id="anniversary">
+            <img src="images/anniversary.jpg" alt="roses">
+        </div>
+        <section class="feb">
+            <h6>feb</h6>
+            <p><strong>Valtines day / anniversary</strong></p>
+            <p>
+                Nothing says you love your significant other on Valentine's Day or your anniversary like fresh flowers.
+                No matter what kind
+                they like we offer it. From lily's, tulips or even roses we have them. Let help make your valentines day
+                even more special for the special someone in your life. We always have fresh flowers on hand, so no
+                matter how busy you are we always have your back for those last-minute flower needs.
             </p>
         </section>
 
