--- a/personalsite/sympathy.html
+++ b/personalsite/sympathy.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <a href="index.html">Home</a>
-            <a href="specialoccasions.html">Special occasions</a>
+            <a href="special-occasions.html">Special occasions</a>
             <a id="logo-link" href="index.html">
                 <img class="logo" src="images/logo.png" alt="Petal Pantry Logo">
             </a>
@@ -20,9 +20,6 @@
             <a href="site-plan.html">Site-Plan</a>
         </nav>
     </header>
-    <div id="banner">
-        <img id="banner-img" src="images/flowereshop.jpg" alt="flowershop counter">
-    </div>
     <main class="sympathy-grid">
         <p>
             It's never an easy when you lose a loved one, but a funeral should be celebration of life. There for the
@@ -33,6 +30,12 @@
             during this difficult time. If there is something specific, you would like to say to the family we are happy
             to add it to the card. Other wise we will add something appropriate to the card.
         </p>
+
+        <section id="sympathy-img">
+            <h6>funeral</h6>
+            <img src="" alt=""
+            <img src="images/casketmount.jpg" alt="casket mount"></imgs>
+        </section>
 
     </main>
     <footer>
