sympathy pages complete

--- a/personalsite/special-occasions.html
+++ b/personalsite/special-occasions.html
@@ -33,7 +33,7 @@
         <div id="wedding4">
             <img src="images/hand-corsages.jpg" alt="white rose corsages">
         </div>
-        <section class="weddings">
+        <section class="weddings-info">
             <h6>weddings</h6>
             <P><strong>Weddings</strong></P>
             <p>
@@ -52,7 +52,7 @@
         <div id="mothers-pic1">
             <img src="images/roses.jpg" alt="bunch of roses">
         </div>
-        <section class="mothers">
+        <section class="mothers-info">
             <h6>mothersday</h6>
             <p><strong>Mothers Day</strong></p>
             <p>
@@ -68,7 +68,7 @@
         <div id="anniversary">
             <img src="images/anniversary.jpg" alt="roses">
         </div>
-        <section class="feb">
+        <section class="feb-info">
             <h6>feb</h6>
             <p><strong>Valtines day / anniversary</strong></p>
             <p>
