--- a/personalsite/sympathy.html
+++ b/personalsite/sympathy.html
@@ -21,21 +21,43 @@
         </nav>
     </header>
     <main class="sympathy-grid">
-        <p>
-            It's never an easy when you lose a loved one, but a funeral should be celebration of life. There for the
-            flowers should be an extension in every aspect. From the casket mount to the easel even down to the smallest
-            container. If you have any special items like, their favorite sport, a hobby, maybe even something forms
-            their career. Any of these ideas can be incorporated into the arrangements. There are also options for
-            smaller arrangements that are great options to send directly to the family to help brighten up there day
-            during this difficult time. If there is something specific, you would like to say to the family we are happy
-            to add it to the card. Other wise we will add something appropriate to the card.
-        </p>
-
-        <section id="sympathy-img">
+        <section id="funeral-info">
             <h6>funeral</h6>
-            <img src="" alt=""
-            <img src="images/casketmount.jpg" alt="casket mount"></imgs>
+            <p>
+                It's never an easy when you lose a loved one, but a funeral should be celebration of life. There for the
+                flowers should be an extension in every aspect. From the casket mount to the easel even down to the
+                smallest
+                container. If you have any special items like, their favorite sport, a hobby, maybe even something forms
+                their career. Any of these ideas can be incorporated into the arrangements. There are also options for
+                smaller arrangements that are great options to send directly to the family to help brighten up there day
+                during this difficult time. If there is something specific, you would like to say to the family we are
+                happy
+                to add it to the card. Other wise we will add something appropriate to the card.
+            </p>
         </section>
+        <img src="images/containers.jpg" alt="container of flowers">
+        <img src="images/casketmount.jpg" alt="casket mount">
+        <img src="images/funeral-easel.jpg" alt="simple easel">
+
+        <section id="getwell-info">
+            <h6>getwell</h6>
+            <p>
+                Being in sick is never a fun experience. That's where our flowers come into play, because whether there
+                in the
+                hospital because of a broken bone or something more serious. Or just at home because of the flu or
+                covid-19, there
+                day can still be brightened up with some flowers. Options include simple tasteful wraps, small
+                arrangements, large
+                arrangements. Some even including a stuffed animal so they can have a companion while they are sick.
+                When it comes
+                to get well arrangements the cards that are included. The costumer would provide what is on the card.
+                But we also
+                offer the option to add something simple if you don't provide something for the card.
+            </p>
+        </section>
+        <img src="images/h-flowers.jpg" alt="bright flowrs">
+        <img src="images/getwell.jpg" alt="get well flowrs">
+        <img src="images/hospital-flowers.jpg" alt="hospital flowers">
 
     </main>
     <footer>
