--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -16,8 +16,8 @@
             <a id="logo-link" href="index.html">
                 <img class="logo" src="images/logo.png" alt="Petal Pantry Logo">
             </a>
-            <a Href="sympathy.html">Sympathy</a>
-            <a href="site-plan.html">Site-Plan</a>
+            <a href="sympathy.html">Sympathy</a>
+            <a href="review.html">Reviews</a>
         </nav>
     </header>
     <div id="banner">
