--- a/personalsite/special-occasions.html
+++ b/personalsite/special-occasions.html
@@ -47,7 +47,7 @@
             </p>
         </section>
         <div id="mothers-pic">
-            <img src="images/bright flowers.jpg" alt="bright flowers">
+            <img src="images/bright-flowers.jpg" alt="bright bouquet">
         </div>
         <div id="mothers-pic1">
             <img src="images/roses.jpg" alt="bunch of roses">
