--- a/personalsite/special-occasions.html
+++ b/personalsite/special-occasions.html
@@ -10,14 +10,14 @@
 
 <body>
     <header>
+        <a id="logo-link" href="index.html">
+            <img class="logo" src="images/logo.png" alt="Petal Pantry Logo">
+        </a>
         <nav>
             <a href="index.html">Home</a>
             <a href="special-occasions.html">Special occasions</a>
-            <a id="logo-link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Petal Pantry Logo">
-            </a>
-            <a Href="sympathy.html">Sympathy</a>
-            <a href="site-plan.html">Site-Plan</a>
+            <a href="sympathy.html">Sympathy</a>
+            <a href="review.html">Reviews</a>
         </nav>
     </header>
     <main class="occasion-grid">
