--- a/personalsite/review.html
+++ b/personalsite/review.html
@@ -43,8 +43,8 @@
             const formElement = document.forms[0];
             formElement.addEventListener('submit', function (e) {
                 e.preventDefault();
-                feedbackElement.innerHTML = 'Hello ' + formElement.user_name.value +
-                    '! Thank you for your message. We will get back with you as soon as possible!';
+                feedbackElement.innerHTML = formElement.user_name.value +
+                    ', Thank you for your review. We hope we will see you again.';
                 feedbackElement.style.display = "block";
                 document.body.classList.toggle('moveDown');
             });
